--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_library(webserver SHARED main.cpp
         Networking/simple_socket.cpp
-        Networking/simple_socket.hpp)
+        Networking/simple_socket.hpp
+        Networking/binding_socket.cpp
+        Networking/binding_socket.hpp)
