added connecting socket

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ add_library(webserver SHARED main.cpp
         Networking/simple_socket.cpp
         Networking/simple_socket.hpp
         Networking/binding_socket.cpp
-        Networking/binding_socket.hpp)
+        Networking/binding_socket.hpp
+        Networking/connecting_socket.cpp
+        Networking/connecting_socket.hpp)
